--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,17 +55,11 @@ jobs:
         
       - name: Deploy to main
         if: success() 
-        uses: devops-infra/action-pull-request@v0.5.3
+        uses: MaximeHeckel/github-action-merge-fast-forward@v1.1.0
         with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          source_branch: dev
-          target_branch: main
-          title: Automatique merge into main
-          template: .github/PULL_REQUEST_TEMPLATE.md
-          body: "**Automated pull request**"
-          label: enhancement
-          draft: true
-          new_string: "** Automatic pull request**"
-          get_diff: true
-          ignore_users: "dependabot"
-          allow_no_diff: true
+          # Branch to merge
+          branchtomerge: dev
+          # Branch that will be updated
+          branch: master
+        env:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
