--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -40,20 +40,24 @@ jobs:
         
       - name: Rejected to main
         if: failure() 
-        uses: devops-infra/action-pull-request@v0.5.3
-        with:
-          github_token: ${{ secrets.GITHUB_TOKEN }}
-          source_branch: dev
-          target_branch: rejected/no_build
-          title: Automatique merge into main
-          template: .github/PULL_REQUEST_TEMPLATE.md
-          body: "**Automated pull request rejected**"
-          label: enhancement
-          draft: true
-          new_string: "** Automatic pull request rejected**"
-          get_diff: true
-          ignore_users: "dependabot"
-          allow_no_diff: true
+        run: |
+          echo "# Config"
+          git config --local user.email "[hidden]"
+          git config --local user.name "CI"
+          echo "# Fetch all"
+          git fetch --all
+          echo "# Checkout/pull development"
+          git checkout dev
+          git pull
+          echo "# Checkout/pull rejected/no_build"
+          git checkout rejected/no_build
+          git pull
+          echo "# Merge"
+          git merge dev -X theirs --allow-unrelated-histories
+          echo "# Push"
+          git push origin main
+          echo "Remove Commit From Dev"
+          git reset --soft HEAD~1
         
       - name: Deploy to main
         if: success() 
