--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,7 @@ jobs:
           git checkout dev
           git pull
           echo "# Checkout/pull rejected/no_build"
-          git checkout rejected/no_build
+          git checkout -b rejected/no_build
           git pull
           echo "# Merge"
           git merge dev -X theirs --allow-unrelated-histories
