--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -55,7 +55,7 @@ jobs:
           echo "# Merge"
           git merge dev -X theirs --allow-unrelated-histories
           echo "# Push"
-          git push origin main
+          git push origin rejected/no_build
           echo "Remove Commit From Dev"
           git reset --soft HEAD~1
         
