--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -56,6 +56,7 @@ jobs:
           echo "# Push"
           git push origin rejected/no_build
           echo "Remove Commit From Dev"
+          git checkout dev
           git reset --soft HEAD~1
         
       - name: Deploy to main
