--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,10 +48,10 @@ jobs:
           git fetch --all
           echo "# Checkout/pull development"
           git checkout dev
-          git pull
+          git pull 
           echo "# Checkout/pull rejected/no_build"
           git checkout -b rejected/no_build
-          git pull
+          git pull origin rejected/no_build
           echo "# Merge"
           git merge dev -X theirs --allow-unrelated-histories
           echo "# Push"
