--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,17 +48,14 @@ jobs:
           git fetch --all
           echo "# Checkout/pull development"
           git checkout dev
-          git pull 
+          git pull
           echo "# Checkout/pull rejected/no_build"
           git checkout -b rejected/no_build
-          git pull origin rejected/no_build
+          git pull
           echo "# Merge"
           git merge dev -X theirs --allow-unrelated-histories
           echo "# Push"
-          git push -f origin rejected/no_build
-          echo "Remove Commit From Dev"
-          git checkout dev
-          git reset --soft HEAD~1
+          git push origin rejected/no_build
         
       - name: Deploy to main
         if: success() 
