--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,6 +49,7 @@ jobs:
           echo "# Checkout/pull rejected/no_build"
           git checkout dev
           git branch rejected/no_build
+          git checkout dev
           git reset --hard HEAD~1
         
       - name: Deploy to main
