--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,11 +48,10 @@ jobs:
           git fetch --all
           echo "# Checkout/pull rejected/no_build"
           git pull
-          git checkout dev
-          git merge rejected/no_build
           git checkout rejected/no_build
-          git reset --hard HEAD~1 # Go back 3 commits. You *will* lose uncommitted work.
+          git merge
           git checkout dev
+          git reset –hard HEAD~1.
         
       - name: Deploy to main
         if: success() 
