--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -51,7 +51,7 @@ jobs:
           git checkout rejected/no_build
           git merge
           git checkout dev
-          git reset –hard HEAD~1.
+          git reset --hard HEAD~1.
         
       - name: Deploy to main
         if: success() 
