--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -48,10 +48,8 @@ jobs:
           git fetch --all
           echo "# Checkout/pull rejected/no_build"
           git pull
-          git checkout rejected/no_build
-          git merge
           git checkout dev
-          git reset --hard HEAD~1.
+          git reset --hard HEAD~1
         
       - name: Deploy to main
         if: success() 
