--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -49,8 +49,8 @@ jobs:
           echo "# Checkout/pull rejected/no_build"
           git pull
           git checkout dev
-          git reset --hard HEAD~1
-        
+          git commit --amend
+
       - name: Deploy to main
         if: success() 
         run: |
