--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -47,7 +47,7 @@ jobs:
           echo "# Checkout/pull rejected/no_build"
           
           git_hash=$(git rev-parse --short "$GITHUB_SHA")
-          echo git_hash
+          echo "${GITHUB_SHA}"
 
       - name: Deploy to main
         if: success() 
