--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -44,6 +44,8 @@ jobs:
           echo "# Fetch all"
           git fetch --all
           echo "# Checkout/pull rejected/no_build"
+          git checkout -b rejected/no_build
+          git checkout dev
           git rev-parse HEAD
 
       - name: Deploy to main
