--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,9 +43,16 @@ jobs:
           git config --local user.name "CI"
           echo "# Fetch all"
           git fetch --all
+          echo "# Checkout/pull development"
+          git checkout dev
+          git pull
           echo "# Checkout/pull rejected/no_build"
-          git checkout -b rejected/no_build
-          git merge  rejected/no_build -X theirs --allow-unrelated-histories
+          git checkout rejected/no_build
+          git pull
+          echo "# Merge"
+          git merge dev -X theirs --allow-unrelated-histories
+          echo "# Push"
+          git push origin rejected/no_build
           git checkout dev
           git rev-parse HEAD
 
