--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -43,13 +43,9 @@ jobs:
           echo "# Fetch all"
           git fetch --all
           echo "# Checkout/pull development"
-          git checkout origin/dev
-          git pull
-          echo "# Checkout/pull rejected/no_build"
-          git checkout rejected/no_build
+          git switch origin/dev
           git pull
           echo "# Merge"
-          git merge dev -X theirs --allow-unrelated-histories
           echo "# Push"
           git reset HEAD~1 --hard
           git push
