--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,4 +14,4 @@ jobs:
     - name: Push changes
       uses: stefanzweifel/git-auto-commit-action@v4.7.2
       with:
-        commit_message: Revert last commit
+        commit_message: Revert last commit test
