--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -10,7 +10,10 @@ jobs:
     - name: Checkout branch
       uses: actions/checkout@v2
     - name: Revert Last Commit
-      run: git reset HEAD~1
+      run: |
+        git log --pretty=format:"%h - %an, %ar : %s"
+        git reset HEAD~1
+        
     - name: Push changes
       uses: stefanzweifel/git-auto-commit-action@v4.7.2
       with:
