--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -2,7 +2,7 @@ name: Revert Last Commit
 on:
   push:
     branches:
-      - dev
+      - main
 jobs:
   revert-commit:
     runs-on: ubuntu-latest
