--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,20 +1,71 @@
-name: Revert Last Commit
-on:
+name: Tests and Deploy
+'on':
   push:
     branches:
-      - main
+      - dev
+
 jobs:
-  revert-commit:
+  test:
+    name: 'Node.js v${{ matrix.node }}'
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node:
+          - 16
     steps:
-    - name: Checkout branch
-      uses: actions/checkout@v2
-    - name: Revert Last Commit
-      run: |
-        git log --pretty=format:"%h - %an, %ar : %s"
-        git reset HEAD~1
-        
-    - name: Push changes
-      uses: stefanzweifel/git-auto-commit-action@v4.7.2
-      with:
-        commit_message: Revert last commit test
+      - uses: actions/setup-node@v1
+        with:
+          node-version: '${{ matrix.node }}'
+      - uses: actions/checkout@v2
+      - name: 'Cache node_modules'
+        uses: actions/cache@v2
+        with:
+          path: ~/.npm
+          fetch-depth: 0
+          ref: dev
+          key: ${{ runner.os }}-node-v${{ matrix.node }}-${{ hashFiles('**/package-lock.json') }}
+          restore-keys: |
+            ${{ runner.os }}-node-v${{ matrix.node }}-
+            
+      - name: Install Dependencies
+        run: npm install
+
+      - name: Run All Node.js Tests
+        run: npm run test
+        env:
+         CI: true
+
+      - name: Rejected to main
+        if: failure() 
+        run: |
+          echo "# Config"
+          git config --local user.email "[hidden]"
+          git config --local user.name "CI"
+          echo "# Fetch all"
+          git fetch --all
+          echo "# Checkout/pull development"
+          git switch dev
+          git pull
+          echo "# Merge"
+          echo "# Push"
+          git reset HEAD~1 --hard
+          git push
+          
+      - name: Deploy to main
+        if: success() 
+        run: |
+          echo "# Config"
+          git config --local user.email "[hidden]"
+          git config --local user.name "CI"
+          echo "# Fetch all"
+          git fetch --all
+          echo "# Checkout/pull development"
+          git checkout dev
+          git pull
+          echo "# Checkout/pull master"
+          git checkout main
+          git pull
+          echo "# Merge"
+          git merge dev -X theirs --allow-unrelated-histories
+          echo "# Push"
+          git push origin main
