--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,7 @@ jobs:
           git pull
           echo "# Merge"
           echo "# Push"
-          git reset HEAD~1 --hard
+          git revert HEAD
           git pull
           git push -f origin dev
           
