--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -50,7 +50,7 @@ jobs:
           git pull
           echo "# Merge"
           echo "# Push"
-          git revert HEAD~1
+          git reset --hard HEAD~1
           git pull
           git push -f origin dev
           
