--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -52,9 +52,8 @@ jobs:
           echo "# Push"
           git reset --hard HEAD~1
           git pull
+          git checkout dev
           git push -f origin dev
-          git fetch origin
-          git reset --hard origin/dev
           
       - name: Deploy to main
         if: success() 
