--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -54,7 +54,7 @@ jobs:
           git push origin rejected/no_build
           echo "# Push"
           git checkout dev
-          git reset --hard HEAD
+          git reset --hard HEAD~1
           git push -f origin dev
           
       - name: Deploy to main
