--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -6,7 +6,7 @@ name: Tests and Deploy
 
 jobs:
   test:
-    name: 'Node.js v${{ matrix.node }}'
+    name: 'Testing'
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -35,9 +35,67 @@ jobs:
         run: npm run test
         env:
          CI: true
-
-      - name: Rejected to main
-        if: failure() 
+          
+          
+  deploy-main:
+    name: 'Deploy to main'
+    runs-on: ubuntu-latest
+    needs: [test]
+    if: |
+      always() && 
+      (needs.test.result == 'success')
+    strategy:
+      matrix:
+        node:
+          - 16
+    steps:
+      - uses: actions/setup-node@v1
+        with:
+          node-version: '${{ matrix.node }}'
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+          ref: dev
+      - name: Deploy to main
+        run: |
+          echo "# Config"
+          git config --local user.email "[hidden]"
+          git config --local user.name "CI"
+          echo "# Fetch all"
+          git fetch --all
+          echo "# Checkout/pull development"
+          git checkout dev
+          git pull
+          echo "# Checkout/pull master"
+          git checkout main
+          git pull
+          echo "# Merge"
+          git merge dev -X theirs --allow-unrelated-histories
+          echo "# Push"
+          git push origin
+          
+          
+          
+  deploy-rejected:
+    name: 'Deploy to rejected'
+    runs-on: ubuntu-latest
+    needs: [test]
+    if: |
+      always() && 
+      (needs.test.result == 'failure')
+    strategy:
+      matrix:
+        node:
+          - 16
+    steps:
+      - uses: actions/setup-node@v1
+        with:
+          node-version: '${{ matrix.node }}'
+      - uses: actions/checkout@v2
+        with:
+          fetch-depth: 0
+          ref: dev
+      - name: Deploy
         run: |
           echo "# Config"
           git config --local user.email "[hidden]"
@@ -57,21 +115,4 @@ jobs:
           git reset --hard HEAD~1
           git push -f origin dev
           
-      - name: Deploy to main
-        if: success() 
-        run: |
-          echo "# Config"
-          git config --local user.email "[hidden]"
-          git config --local user.name "CI"
-          echo "# Fetch all"
-          git fetch --all
-          echo "# Checkout/pull development"
-          git checkout dev
-          git pull
-          echo "# Checkout/pull master"
-          git checkout main
-          git pull
-          echo "# Merge"
-          git merge dev -X theirs --allow-unrelated-histories
-          echo "# Push"
-          git push origin main
+    
