--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -106,10 +106,10 @@ jobs:
           echo "# Checkout/pull development"
           git checkout dev
           git pull
-          git checkout -b rejected/no_build
+          git checkout -b rejected/{{github.run_number}}
           echo "# Merge"
           git merge dev -X theirs --allow-unrelated-histories
-          git push origin rejected/no_build
+          git push origin rejected/{{github.run_number}}
           echo "# Push"
           git checkout dev
           git reset --hard HEAD~1
