--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -77,7 +77,7 @@ jobs:
           
           
   deploy-rejected:
-    name: 'Deploy to rejected'
+    name: 'Deploy to rejected build ${{ github.run_number }}'
     runs-on: ubuntu-latest
     needs: [test]
     if: |
@@ -106,10 +106,10 @@ jobs:
           echo "# Checkout/pull development"
           git checkout dev
           git pull
-          git checkout -b rejected/{{github.run_number}}
+          git checkout -b rejected/${{ github.run_number }}
           echo "# Merge"
           git merge dev -X theirs --allow-unrelated-histories
-          git push origin rejected/{{github.run_number}}
+          git push origin rejected/${{ github.run_number }}
           echo "# Push"
           git checkout dev
           git reset --hard HEAD~1
